menu_navigacio_video

--- a/ds.html
+++ b/ds.html
@@ -2,7 +2,7 @@
 <html lang= "en">
 
 <head>
-
+        <link rel="stylesheet" href="css/ds.html.css">
  
         <meta charset="UTF-8">
         <meta name="description" content="Darksouls csoport munka">
@@ -10,16 +10,32 @@
         <meta name="author" content="Fazekas Milán">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Fatalicska</title>
+    <style>
+                  .image-container {
+                 text-align: center; 
+                 margin-top: 0px; 
+                 }
+             .image-container img {
+                   max-width: 100%; 
+                  height: auto;
+                  }
+                  a {
+                color: white;
+                  }
+        </style>
     </head>
 
 <body>
 
-    <a href="tf2.html">Transport Fever 2!</a>
-    <a href="csgo.html">CS!</a>
-    <a href="index.html">BeamNG!</a>
+    <a href="index.html">Menü</a>
+    <a href="beamng.html">BeamNG.drive</a>
+    <a href="ds.html">Dark Souls</a>
+    <a href="tf2.html">Transport Fever 2</a>
+    <a href="csgo.html">Counter Strike Global Offensive</a>
 
-    <img src="kepek/dswiki.png" alt="Dark Souls WIKI">
-
+    <div class="image-container">
+        <img src="kepek/dswiki.png" alt="Darksouls WIKI">
+    </div>
 
     <h1>Dark Souls Wiki has the best information on weapons, armor, classes, items, locations, secrets, gestures,
         walkthroughs, and maps. Find out everything you need to know about the game</h1>
