--- a/tf2.html
+++ b/tf2.html
@@ -9,6 +9,12 @@
     <title>Transport Fever 2</title>
 </head>
 <body>
+    <a href="index.html">Menü</a>
+    <a href="beamng.html">BeamNG.drive</a>
+    <a href="ds.html">Dark Souls</a>
+    <a href="tf2.html">Transport Fever 2</a>
+    <a href="csgo.html">Counter Strike Global Offensive</a>
+    <br>
     <img src="kepek/transport-fever-2-promo-kep-670x377.jpg" alt="Logó" style="width:auto;">
     <h1>Transport Fever 2</h1>
         <h2>Maga a játék</h2>
@@ -29,9 +35,5 @@
         <img src="kepek/Tf2bridge.jpg" alt="Tf2 bridge">
     <h2>Dlc-k</h2>
         <p>Jelenleg csak 2 dlc van a játékhoz</p>
-        <h3>Linkek a többi oldalra:</h3>
-        <a href="ds.html">Fazekas Milan Órai munka</a>
-        <a href="csgo.html">Kádár Péter Órai munka</a>
-        <a href="index.html">Kis Csaba Dénes Órai munka</a>
 </body>
 </html>
