--- a/csgo.html
+++ b/csgo.html
@@ -10,6 +10,11 @@
     
 </head>
 <body>
+    <a href="index.html">Menü</a>
+    <a href="beamng.html">BeamNG.drive</a>
+    <a href="ds.html">Dark Souls</a>
+    <a href="tf2.html">Transport Fever 2</a>
+    <a href="csgo.html">Counter Strike Global Offensive</a>
     <h1>Röviden a játékról</h1>
     <p>
         Counter-Strike: Global Offensiv egy taktikai első személyű lövöldözős játék, amit a Valve és a Hidden Path Entertainment fejlesztett. 
@@ -73,11 +78,6 @@
         A térképen való mozgás és a folyamatos magassági előny kihasználása kulcsfontosságú.
         A bombát elhelyező csapatnak nehézséget okoz a nyílt területeken való túlélés.
     </p>
-	<h1>Linkek a többi oldalra:</h1>
-	<a href="ds.html">Fazekas Milan Órai munka</a>
-    <a href="index.html">Kis Csaba Dénes Órai munka</a>
-    <a href="tf2.html">Czeczei Bence Órai munka</a>
-
     
 
 </body>
