--- a/index.html
+++ b/index.html
@@ -1,31 +1,80 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html lang="hu">
-	<head>
-		<title>Fatalicska</title>
-		<meta charset="UTF-8">
-		<meta name="description" content="BeamNG Videójáték">
-		<meta name="keywords" content="Csapatmunka, BeamNG, Autók, Szimuláció">
-		<meta name="author" content="Kis Csaba D.">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="icon" type="image/x-icon" href="kepek/index_favicon.webp">
-	</head>
-	<body>
-        <h1>BeamNG.drive Autós játék bemutatása.</h1>
-		<img src="kepek/kep.webp" alt="Piros Cheerrier Picnic Autó WCUSA Pályán" style="width:500px;">
-        <img src="kepek/kep1.webp" alt="Sötét Vörös ETK 800-Series TTSport Autó Hirochi Rainway pályán" style="width:500px;">
-        <img src="kepek/kep2.webp" alt="Narancssárga Procyon Centauri Italy pályán" style="width:500px;">
-        <p>A BeamNG.drive egy autós játék amely ismert a fejlett ütközés szimulációról, és az élvezetes vezetési élményéről amit nyújt.</p>
-        <img src="kepek/kep3.webp" alt="Procyon Centauri és Ibishu CrossSport baleset ECUSA pályán " style="width:500px;">
-        <img src="kepek/kep4.webp" alt="Gavril Scout és Ibishu CrossPort baleset ECUSA pályán" style="width:500px;">
-        <img src="kepek/kep5.webp" alt="Gavril T-Series belehajt sok parkoló autóba nagy sebességgel" style="width:500px;">
-        <p>Az összes képet én csináltam a játékban.</p>
-        <iframe width="420" height="315"
-            src="https://www.youtube.com/watch?v=5jxVPulW0r0">
-        </iframe>
-        <p>Csodálatos körözés egy versenypályán amíg neki nem csapódok egy falnak.</p>
-        <h3>Linkek a többi oldalra:</h3>
-        <a href="ds.html">Fazekas Milan Órai munka</a>
-        <a href="csgo.html">Kádár Péter Órai munka</a>
-        <a href="tf2.html">Czeczei Bence Órai munka</a>
-	</body>
+<head>
+    <meta charset="UTF-8">
+     <meta name="description" content="Fatalicska Csoport Munka">
+    <meta name="keywords" content="DS, TF2, BeamBG, CS">
+    <meta name="author" content="Fatalicska">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="index.html.css">
+   <style>
+        body {
+            display: flex;
+            justify-content: center; 
+            align-items: center; 
+            height: 100vh; 
+            margin: 0;
+			padding: 20px; 
+            box-sizing: border-box; 
+			background-color: #292929; 
+            background-image: url('kepek/darkbg.png'); 
+            background-size: cover; 
+            background-position: center; 
+            background-repeat: no-repeat; 
+        }
+		
+        .menu-container {
+            display: flex; 
+            justify-content: center; 
+            text-align: center; 
+        }
+        .menu-item {
+            margin: 20px; 
+        }
+        .menu-item img {
+            max-width: 400px; 
+            height: auto;
+        }
+		.text-container {
+            width: 100%; 
+            text-align: center; 
+            margin-bottom: 50px; 
+			color: rgb(206, 206, 206); 
+		}
+    </style>
+</head>
+<body>
+	<div class="text-container">
+        <h1>Fatalicska Csapat Sigma Menu V0.2:</h1>
+
+    <div class="menu-container">
+        <div class="menu-item">
+            <a href="beamng.html">
+                <img src="kepek/kep2.webp" alt="BeamNG">
+                <p>BeamNG</p>
+            </a>
+        </div>
+        <div class="menu-item">
+            <a href="ds.html">
+                <img src="kepek/dsgoat.png" alt="WDark Souls Remastered">
+                <p>Dark Souls Remastered</p>
+            </a>
+        </div>
+        <div class="menu-item">
+            <a href="tf2.html">
+                <img src="kepek/transport-fever-2-promo-kep-670x377.jpg" alt="Transport Fever 2">
+                <p>Transport Fever 2</p>
+            </a>
+        </div>
+        <div class="menu-item">
+            <a href="csgo.html">
+                <img src="kepek/mirage.png" alt="Counter-Strike">
+                <p>Counter-Strike</p>
+            </a>
+        </div>
+    </div>
+	<div class="text-container">
+        <p></p>
+</body>
 </html>
